Create the design wireframe

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Leaderboard</h1>
+    <main>
 
     <section id="scores">
         <div id="list-heading">
@@ -27,6 +28,7 @@
             <button id="submit">Submit</button>
         </form>
     </section>
+    </main>
     
 </body>
 </html>
