--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+
     <title>🏆Leaderboard🏆</title>
 </head>
 <body>
-    <h1>Leaderboard</h1>
+    <h1>Terraria Leaderboard</h1>
     <main>
 
     <section id="scores">
